<resources>
    <string name="app_name">Android 10 Mid Exam</string>
    <string name="enter_user_name">Enter User Name</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Login</string>
    <string name="new_user_register">If you don\'t have account, register </string>
    <string name="register">Register</string>
    <string name="what_s_on_your_mind">What\'s on your mind</string>
    <string name="post">Post</string>
    <string name="enter_password_confirmation">Enter Password Confirmation</string>
    <string name="update">Update</string>
    <string name="logout">LogOut</string>
</resources>
